test/errors/scan_octint.py
0o

0o5_

0o5555_

0o12__34

0o12345678

0o12345679

0o8

0o9

0o4A

0o4Z

0o11a

0o11snafuzzle

0o11z
